openflight-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: openflights-service
spec:
  selector:
    app: openflights
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30000
