openflights-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: openflights-service
spec:
  selector:
    app: openflights
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
