openflights-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openflights-ingress
  labels:
    name: ingress
spec:
  rules:
  - host: "openflights.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: openflights-service
            port: 
              number: 3000
